# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: Project-50-ci.yml
Gendiff/scripts/: gendata.py  gendiff.py  gendiff_json.py  gendiff_yml.py  json_format.py  stylish.py
gendiff/: __init__.py  cli.py  data_reader.py  diff_maker.py  gendiff.py  json_format.py  plain_format.py  stylish_format.py
gendiff/formaters/: json_format.py  plain_format.py  stylish_format.py
gendiff/scripts/: gendiff.py  gendiff_json.py  gendiff_yml.py  json_format.py  script_starter.py
tests/: test_gendiff.py  test_gendiff_json.py  test_gendiff_yml.py
tests/fixtures/: diff_result_raw.md  diff_result_raw_existing.md
tests/fixtures/test_json/: diff_open.md  diff_result_final.md  diff_result_raw.md  diff_result_raw_missing.md  diff_result_stylish.md  file5.json  file6.json  open_result.md  t1.json  t2.json
tests/fixtures/test_yml/: diff_open.md  diff_result_final.md  diff_result_raw.md
