[tool.poetry]
name = "gendiff"
version = "0.1.0"
description = "Difference generator"
authors = ["zwg <zwg.work.mail@gmail.com>"]
readme = "README.md"
packages = [{include = "Gendiff"},]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "Gendiff.scripts.gendiff:main"




[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"

[tool.pytest.ini_options]
pythonpath = [
  "."
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
